@@ -123,21 +123,26 @@ class SeqString:
 
         The text parts are treated as strings, the number parts as numbers
         (e.g. 'a08' is greater than 'a2').
+        If other is a regular string, then only a regular string comparison
+        is done.
         """
         if other is None:
             return 1
         if not isinstance(other, SeqString):
             if not isinstance(other, basestring):
                 return 1
-        
-        # Convert both strings into pristine SeqStrings (because some numbers
-        # on the input strings may have been replaced by strings which would
-        # mess with the comparison).
-        selfStr = SeqString(self)
-        other = SeqString(other)
+            # If other is a regular string, then turn self into a string as well
+            # and use normal string comparison
+            s = str(self)
+            if s<other:
+                return -1
+            elif s>other:
+                return 1
+            else:
+                return 0
         
         # Compare the individual components of the values side by side
-        for i, (a,b) in enumerate(zip(selfStr._value, other._value)):
+        for i, (a,b) in enumerate(zip(self._value, other._value)):
             if i%2==1:
                 # Get the numbers
                 a = a[0]
@@ -150,7 +155,7 @@ class SeqString:
 
         # If we are here everything has been equal so far, but maybe
         # one string has one component more in _value
-        s1 = len(selfStr._value)
+        s1 = len(self._value)
         s2 = len(other._value)
         if s1<s2:
             return -1
